too many changes to really account for. Besides a redesign, view-events page is done

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,22 +1,25 @@
 .light-bg {
     background-color: #c2dfa6;
+
     transition: background-color .2s;
 }
 
 .dark-bg {
     background-color: #118c4e;
+
     transition: background-color .2s;
 }
 
 .orange-bg {
     background-color: #f68f1e;
+
     transition: background-color .2s;
 }
 button.orange-bg:hover {
-    background-color: #FF8500;
+    background-color: #ff8500;
 }
 button.orange-bg:active {
-    background-color: #FF8500;
+    background-color: #ff8500;
 }
 
 .grey-bg {
@@ -37,8 +40,8 @@ body {
 }
 
 body > .container-fluid {
-    padding: 10px 40px;
     max-width: 1920px;
+    padding: 10px 40px;
 }
 
 h3 {
@@ -46,17 +49,31 @@ h3 {
 }
 
 .fc-highlight {
-    background-color: #118c4e;
     opacity: .5;
+    background-color: #118c4e;
 }
 
 .no-select {
-    -webkit-touch-callout: none;
     -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+
+    -webkit-touch-callout: none;
     -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+}
+
+.content {
+    border: 1px solid grey;
+    border-radius: 5px;
+}
+
+.page_break:after {
+    width: 90%;
+    margin: 0 auto;
+    padding-bottom: 50px;
+
+    border-bottom: 1px solid grey;
 }
 
 /*General Items*/
@@ -72,6 +89,7 @@ h3 {
     font-size: 14pt;
 
     color: black;
+    position: relative;
 }
 
 .navbar a,
@@ -82,6 +100,39 @@ h3 {
 .navbar ul.nav {
     float: right;
 }
+
+#dropdown-container {
+    display: none;
+    position: absolute;
+    border-radius: 5px;
+    /*padding: 10px;*/
+    right: 0px;
+    top: 55px;
+    z-index: 1;
+}
+
+#dropdown-container > ul {
+    list-style-type: none;
+    padding: 0px;
+}
+
+#dropdown-container li {
+    list-style-type: none;
+    padding: 15px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color .2s;
+}
+#dropdown-container li:hover {
+    background-color: #118c4e;
+    color: white;
+}
+#dropdown-container li:hover a {
+    color: white;
+}
+#dropdown-container a:hover {
+    text-decoration: none;
+}
 /*NAV BAR*/
 
 /*HOME PAGE*/
@@ -89,9 +140,9 @@ h3 {
 #home-desc {
     font-size: 24pt;
 
-    color: white;
-
     margin-top: 20%;
+
+    color: white;
 
     text-align: center;
 }
@@ -114,39 +165,47 @@ h3 {
 
 #home-info-section {
     position: relative;
+
     cursor: pointer;
 }
 #home-info-section #home-info-cover {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    background-color: #118c4e;
-    opacity: 0;
-    border-radius: 3px;
-    color: white;
-    text-align: center;
     font-size: 30pt;
-    transition: opacity .2s;
+
+    position: absolute;
     z-index: 10;
+
+    width: 100%;
+    height: 100%;
+
+    opacity: 0;
+    color: white;
+    border-radius: 3px;
+    background-color: #118c4e;
+
+    transition: opacity .2s;
+    text-align: center;
 }
 #home-info-section:hover #home-info-cover {
     opacity: .7;
 }
 
 #home-info-section .info-items {
-    text-align: center;
     font-size: 20pt;
-    padding: 20px 0px;
+
+    padding: 20px 0;
+
     color: white;
-    border-radius: 5px;
     border: 3px solid #c2dfa6;
+    border-radius: 5px;
+
+    text-align: center;
 }
 #home-info-section .info-items i {
     font-size: 80pt;
 }
 #home-info-section .row > div:nth-child(1) .info-items {
-    background-color: #cbdfa8;
     color: #585858;
+    background-color: #cbdfa8;
 }
 #home-info-section .row > div:nth-child(2) .info-items {
     background-color: #9fd1b8;
@@ -164,17 +223,17 @@ h3 {
 
 /*EVENT PAGE*/
 
-#event #event-content {
-	border: 1px solid black;
-	border-radius: 5px;
-}
+/*#event #event-content {
+    border: 1px solid black;
+    border-radius: 5px;
+}*/
 
 #event .event-inputs {
-	padding: 10px 0px;
+    padding: 10px 0;
 }
 
 #event-calendar {
-    padding: 20px 0px;
+    padding: 20px 0;
 }
 
 #event #event-preferences {
@@ -186,26 +245,31 @@ h3 {
 /*EVENT PAGE*/
 
 /*AVAILABILITY PAGE - BEGIN*/
-#availability #availability-content {
+/*#availability #availability-content {
     border: 1px solid grey;
     border-radius: 5px;
     font-size: 12pt;
-}
+}*/
 
 #availability #availability-preference {
     text-align: center;
 }
-#availability  #btn-available, #availability  #btn-not-preferred  {
-     border: 3px solid grey;
-     highlight: none;
-     transition: border .2s, background-color .2s;
+#availability  #btn-available,
+#availability  #btn-not-preferred {
+    border: 3px solid grey;
+
+    transition: border .2s, background-color .2s;
+
+    highlight: none;
 }
-#availability  #btn-available:hover, #availability #btn-available.preferenceClicked {
-     border: 3px solid #118c4e;
-     background-color: #118c4e;
-     color: white;
+#availability  #btn-available:hover,
+#availability #btn-available.preferenceClicked {
+    color: white;
+    border: 3px solid #118c4e;
+    background-color: #118c4e;
 }
-#availability  #btn-not-preferred:hover, #availability #btn-not-preferred.preferenceClicked {
+#availability  #btn-not-preferred:hover,
+#availability #btn-not-preferred.preferenceClicked {
     border: 3px solid #c2dfa6;
     background-color: #c2dfa6;
 }
@@ -218,86 +282,83 @@ h3 {
 /*AVAILABILITY PAGE - END*/
 
 /*TABLE STYLE - START*/
-#availability table td.available, #review table td.available {
+#availability table td.available,
+#review table td.available {
     background-color: #118c4e;
 }
-#availability table td.not_preferred, #review table td.not_preferred {
+#availability table td.not_preferred,
+#review table td.not_preferred {
     background-color: #8cc86b;
 }
 
-#availability table, #review table {
+#availability table,
+#review table {
     margin: 20px auto;
+
     border-collapse: collapse;
 }
 
-#availability table td, #review table td {
+#availability table td,
+#review table td {
     /*Table cells*/
     width: 70px;
     height: 30px;
-    /*background-color:#ccc;*/
 
     border: 1px solid black;
+
     vertical-align: middle;
 }
 
-#availability th, #review th {
+#availability th,
+#review th {
     text-align: center;
 }
 
-#availability table td:nth-child(1), #review table td:nth-child(1) {
+#availability table td:nth-child(1),
+#review table td:nth-child(1) {
     font-size: 12pt;
+
     padding-right: 5px;
-    text-align: right;
+
     border: none;
     background-color: white;
+
+    text-align: right;
 }
 /*TABLE STYLE - END*/
 
 /*REVIEW PAGE - START*/
+.timeOption {
+    font-size: 13pt;
 
-#review #review-content {
-    border: 1px solid black;
-    border-radius: 5px;
-}
-
-/*#review #review-event-details {
-
-}*/
-
-#offeredTimesContainer:after, .event-details:after {
-    width: 90%;
-    border-bottom: 1px solid grey;
-    margin: 0 auto;
-    padding-bottom: 50px;
-}
-
-.timeOption { 
     margin-top: 20px;
+    padding: 20px;
+
     border: 1px solid grey;
     border-radius: 10px;
-    padding: 20px;
+
     text-align: center;
-    font-size: 13pt;
 }
 
 .timeOption:hover {
     background-color: #c2dfa6;
 }
 
-.time-hover {
-}
 
-.time-names-hover { /*element that appears on review page*/
+
+.time-names-hover {
+    /*element that appears on review page*/
     position: absolute;
-    border: 1px solid black;
     z-index: 10;
+
     padding: 10px;
+
+    border: 1px solid black;
     border-radius: 3px;
+
     pointer-events: none;
 }
-.time-names-hover > .names-row {
 
-}
 .time-names-hover > #time-names-total {
     font-weight: bold;
 }
@@ -317,6 +378,58 @@ h3 {
 }
 
 /* REVIEW PAGE - END */
+
+/* VIEW EVENTS - BEGIN*/
+
+#view-events #view-events-content {
+    min-height: 100px;
+}
+
+#view-events .view-events-element {
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: border .2s;
+}
+#view-events .view-events-element:hover {
+    border: 2px solid green;
+}
+#view-events .view-events-element > .col-xs-3 {
+    border-right: 1px solid grey;
+}
+
+.view-events-selector {
+    font-size: 14pt;
+    text-align: center;
+    margin-top: 10px;
+    padding: 10px 5px;
+    border: 3px solid grey;
+    cursor: pointer;
+
+    transition: border .2s, background-color .2s;
+
+    highlight: none;
+
+}
+.view-events-selector.clicked, .view-events-selector:hover {
+    color: white;
+    border: 3px solid #118c4e;
+    background-color: #118c4e;
+}
+
+#view-events .view-events-title {
+    margin: 0px 0px 8px 0px;
+    padding: 0px;
+}
+
+#view-events-none {
+    margin: 20px 0px;
+    font-size: 12pt;
+}
+
+/* VIEW EVENTS - END*/
 
 #holdingPage {
     text-align: center;
