--- a/views/pages/availability.ejs
+++ b/views/pages/availability.ejs
@@ -18,12 +18,12 @@
         <% include ../partials/nav %>
     </nav>
 
-    <div id="availability-content" class="col-xs-10 col-xs-offset-1">
+    <div id="availability-content" class="content col-xs-10 col-xs-offset-1">
         <div class="row">
             <h1 id="availability-name" class="col-xs-12"><%= locals.event_name %></h1>
             <p id="availability-descr" class="col-xs-12 lead"><%= locals.event_desc  %></p>
         </div>
-        <div id="availability-event-details" class="event-details row">
+        <div id="availability-event-details" class="page_break row">
             <div id="eventCreator" class="col-xs-12">Event Creator: <b><%= locals.event_creator_fname + " " + locals.event_creator_lname %></b></div>
             <div id="eventLength" class="col-xs-12">Length of Event: <b><%= locals.event_length  %> hour(s)</b></div>
             <div id="availFrom" class="col-xs-12">Dates: <b><%= locals.event_start_date  %> - <%= locals.event_end_date  %></b></div>
