--- a/views/pages/event_create.ejs
+++ b/views/pages/event_create.ejs
@@ -22,7 +22,7 @@
         <% include ../partials/nav %>
     </nav>
 
-    <div id="event-content" class="col-xs-10 col-xs-offset-1">
+    <div id="event-content" class="content col-xs-10 col-xs-offset-1">
         <div class="event-inputs row">
             <form id="event-details" class="col-xs-12">
                 <div class="form-group">
