--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,9 +11,9 @@
 
 	</head>
 <body>
-<%= include ../partials/modal-login %>
-<%= include ../partials/modal-signup %>
-<%= include ../partials/modal-loginalert %>
+<% include ../partials/modal-login %>
+<% include ../partials/modal-signup %>
+<% include ../partials/modal-loginalert %>
 
 <div id="home" class="container-fluid">
     <nav id="nav" class="navbar navbar-default light-bg">
@@ -23,7 +23,7 @@
     <div id="home-jumbo" class="jumbotron grey-bg">
         <div class="row">
             <div class=" col-xs-4 col-xs-offset-1">
-                <img class="img-responsive" src="assets/images/logoSmall.png" />
+                <img class="img-responsive" src="assets/images/logoIcon_white.png" />
             </div>
             <div class="col-xs-6">
                 <div class="row">
