--- a/views/pages/view_events.ejs
+++ b/views/pages/view_events.ejs
@@ -20,7 +20,7 @@
         <% include ../partials/nav %>
     </nav>
     <div id="view-events-content" class="content col-xs-10 col-xs-offset-1">
-        <div class="row">
+        <div class="row page-break">
             <div id="view-events-created-button" class="col-xs-3 col-xs-offset-3">
                 <div class="view-events-selector clicked no-select">Created events</div>
             </div>
@@ -31,7 +31,7 @@
         
 
         <div id="view-events-created" class="row">
-            <h1 class="col-xs-12">Your Events</h1>
+            <!-- <h1 class="col-xs-12">Your Events</h1> -->
 
     <%
         var createdEvents = locals.events[0];
@@ -61,7 +61,7 @@
     %>
         </div>
         <div id="view-events-participated" class="row">
-            <h1 class="col-xs-12">Participated Events</h1>
+            <!-- <h1 class="col-xs-12">Participated Events</h1> -->
 
     <%
         participatedEvents.forEach(function(event) {
