--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -390,6 +390,10 @@ h3 {
     margin-bottom: 25px;
 }
 
+#view-events #view-events-participated {
+    display: none;
+}
+
 #view-events .view-events-element {
     padding: 10px;
     border-radius: 5px;
@@ -430,7 +434,7 @@ h3 {
     padding: 0px;
 }
 
-#view-events-none {
+.view-events-none {
     margin: 20px 0px;
     font-size: 12pt;
 }
