--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -76,6 +76,28 @@ h3 {
     border-bottom: 1px solid grey;
 }
 
+.error-highlight {
+    border: 2px solid red;
+}
+
+.error-text {
+    color: red;
+}
+
+.fc-toolbar {
+    background-color: #585858;
+    color: white;
+    padding: 10px;
+    margin: 0px;
+}
+
+#event-calendar {
+    background-color: #c2dfa6;
+}
+#month-calendar {
+    background-color: white;
+}
+
 /*General Items*/
 
 /*NAV BAR*/
@@ -185,8 +207,14 @@ h3 {
     transition: opacity .2s;
     text-align: center;
 }
-#home-info-section:hover #home-info-cover {
+/*#home-info-section:hover #home-info-cover {
     opacity: .7;
+}
+#home-info-section:hover #home-info-cover > span {
+    margin-top: 50%;
+}*/
+#home-info-section:hover .row > div:nth-child(1) .info-items {
+    box-shadow: 0px 0px 10px 2px #118c4e;
 }
 
 #home-info-section .info-items {
@@ -195,7 +223,6 @@ h3 {
     padding: 20px 0;
 
     color: white;
-    border: 3px solid #c2dfa6;
     border-radius: 5px;
 
     text-align: center;
@@ -206,15 +233,19 @@ h3 {
 #home-info-section .row > div:nth-child(1) .info-items {
     color: #585858;
     background-color: #cbdfa8;
+    transition: box-shadow .2s;
 }
 #home-info-section .row > div:nth-child(2) .info-items {
     background-color: #9fd1b8;
+    opacity: .5;
 }
 #home-info-section .row > div:nth-child(3) .info-items {
     background-color: #46a468;
+    opacity: .5;
 }
 #home-info-section .row > div:nth-child(4) .info-items {
     background-color: #118c4e;
+    opacity: .5;
 }
 
 
