--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,7 +37,7 @@
     </div>
 
     <div id="home-info-section" class="no-select">
-        <div id="home-info-cover">Click to start creating</div>
+        <!-- <div id="home-info-cover"><span>Click to start creating</span></div> -->
         <div class="row">
             <div class="col-xs-3">
                 <div class="info-items">
