--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -304,6 +304,10 @@ h3 {
 #event .page-break:after {
     padding-bottom: 25px;
 }
+
+#event input[type=number] {
+    width: 60px; /*enough for 2-3 numbers*/
+}
 /*EVENT PAGE*/
 
 /*AVAILABILITY PAGE - BEGIN*/
