did some stylings and such. Working on emailing with nodemailer and sendgrid

--- a/views/pages/availability.ejs
+++ b/views/pages/availability.ejs
@@ -20,7 +20,10 @@
 
     <div id="availability-content" class="content col-xs-10 col-xs-offset-1">
         <div class="row">
-            <h1 id="availability-name" class="col-xs-12"><%= locals.event_name %></h1>
+            <h1 class="col-xs-12 page-break">Enter Availability</h1>
+        </div>
+        <div class="row">
+            <h2 id="availability-name" class="col-xs-12"><%= locals.event_name %></h1>
             <p id="availability-descr" class="col-xs-12 lead"><%= locals.event_desc  %></p>
         </div>
         <div id="availability-event-details" class="page-break row">
