--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -41,7 +41,7 @@ body {
 
 body > .container-fluid {
     max-width: 1920px;
-    padding: 10px 40px;
+    padding: 0px 0px 10px 0px;
 }
 
 h3 {
@@ -71,7 +71,8 @@ h3 {
 .page-break:after {
     width: 90%;
     margin: 0 auto;
-    padding-bottom: 50px;
+    margin-bottom: 20px;
+    padding-bottom: 30px;
 
     border-bottom: 1px solid grey;
 }
@@ -297,7 +298,7 @@ h3 {
     margin-bottom: 5px;
 }
 #event .time-input span {
-    width: 130px;
+    width: 170px;
     display: inline-block;
 }
 
