--- a/views/pages/event_create.ejs
+++ b/views/pages/event_create.ejs
@@ -22,7 +22,10 @@
         <% include ../partials/nav %>
     </nav>
     
-    <div id="event-content" class="content col-xs-10 col-xs-offset-1">
+    <div id="event-content" class="content col-md-10 col-md-offset-1 col-xs-12">
+        <div class="row">
+            <h1 class="col-xs-12">Create Event</h1>
+        </div>
         <div class="event-inputs row page-break">
             <form id="event-details" class="col-xs-12">
                 <div class="form-group">
@@ -45,11 +48,11 @@
                         <label class="input-label">What times can the event occur?</label>
                         <div class="form-inline">
                             <div class="time-input col-xs-12">
-                                <span>No earlier than</span>
+                                <span>Starting no earlier than</span>
                                 <input type="time" name="event-time-from" class="form-control" value="" required="" title="">
                             </div>
                             <div class="time-input col-xs-12">
-                                <span>No later than</span>
+                                <span>Starting no later than</span>
                                 <input type="time" name="event-time-to" class="form-control" value="" required="" title="">
                             </div>
                         </div>
