recommended times kind of working

--- a/views/pages/event_review.ejs
+++ b/views/pages/event_review.ejs
@@ -55,7 +55,7 @@
                 Select best time for your event from recommended times and Coordinate will notify participants of the event time.
             </p>
 
-            <div class="col-xs-6 col-xs-offset-3 timeOption">
+            <!--<div class="col-xs-6 col-xs-offset-3 timeOption">
                 <div class="col-xs-2">Tue 17</div>
                 <div class="col-xs-10">
                     <div class="col-xs-12">9:00AM TO 10:00AM</div>
@@ -75,7 +75,7 @@
                     <div class="col-xs-12">1:00PM TO 2:00PM</div>
                     <div class="col-xs-12">Most Participants Available</div>
                 </div>
-            </div>
+            </div>-->
 
             <div class="col-xs-12">
                 <button id="schedule-event" type="button" class="btn btn-default btn-lg orange-bg pull-right">Schedule Event</button>
